<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvSelectProductTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_medicamentos"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"/>

    <ListView
        android:id="@+id/listViewProducts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/btnVerHistorial"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/tvSelectProductTitle"/>

    <Button
        android:id="@+id/btnVerCarrito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnVerHistorial"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-8dp"
        android:text="@string/ver_carrito" />

    <Button
        android:id="@+id/btnVerHistorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="221dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="-9dp"
        android:text="@string/ver_historial_compras" />

</RelativeLayout>
